--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "daily-journal-app",
+  "name": "new-journal-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
-    "bcryptjs": "^2.4.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "cookie": "^0.6.0",
-    "date-fns": "^2.30.0",
-    "react-icons": "^4.11.0",
-    "recharts": "^2.9.0",
-    "axios": "^1.6.0"
+    "lucide-react": "^0.501.0",
+    "next": "15.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/react": "^18.2.33",
-    "@types/node": "^20.8.10",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
