--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,8 @@
-#:schema node_modules/wrangler/config-schema.json
 name = "daily-journal-app"
-main = ".open-next/worker.js"
-compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
-[assets]
-directory = ".open-next/assets"
-binding = "ASSETS"
+main = "src/index.js"
+compatibility_date = "2023-12-01"
+
 [[d1_databases]]
 binding = "DB"
 database_name = "daily-journal-db"
-database_id = "local"
+database_id = "daily-journal-db"
